src/main/java/com/example/DiplomaSite/error/DiplomaThesisDeletionException.java
package com.example.DiplomaSite.error;

public class DiplomaThesisDeletionException extends RuntimeException{
    public DiplomaThesisDeletionException(String message, Throwable cause) {
        super(message, cause);
    }
}
